# profile_estimation

./: .gitmodules  CMakeLists.txt  Makefile  README.md
conda/: build.sh  meta.yaml
data/: lineages_small.yml  subset.meta.tsv  variants.txt
src/: functions.c  ndarray.c  ndarray.h  profile_estimation.c  timed_profile_estimation.c
test/: leak.c  run.c  test_functions.c  test_ndarray.c
